--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile files('libs/gson-2.2.4.jar')
-    compile files('libs/okhttp-2.7.5.jar')
-    compile files('libs/okio-1.6.0.jar')
     compile 'com.jakewharton:butterknife:7.0.1'
-
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile files('libs/gson-2.7.jar')
+    compile files('libs/okhttp-3.2.0.jar')
+    compile files('libs/okio-1.9.0.jar')
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
 }
