--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name=".FuLiCenterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/launcher"
-        android:label="FuLiCenter"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity" />
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GoodsDetailActivity" />
-        <activity android:name=".activity.BoutiqueChildActivity"></activity>
+        <activity android:name=".activity.BoutiqueChildActivity" />
+        <activity android:name=".activity.CategoryChildActivity"></activity>
     </application>
 
 </manifest>
