--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".activity.GoodsDetailActivity" />
         <activity android:name=".activity.BoutiqueChildActivity" />
-        <activity android:name=".activity.CategoryChildActivity"></activity>
+        <activity android:name=".activity.CategoryChildActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.RegisterActivity"></activity>
     </application>
 
 </manifest>
